Popovers should be inline-blocks to position popover correctly aligned to the button.

--- a/scss/partials/_popover-v1-0.scss
+++ b/scss/partials/_popover-v1-0.scss
@@ -2,6 +2,8 @@
 	.popover { 
 		position: relative;
 
+		display: inline-block;
+
 		&::after {
 			@include transition(opacity $base-duration $base-timing);
 
